--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,3 +28,20 @@ layout: default
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
+
+<script src="https://giscus.app/client.js"
+        data-repo="saeedsalam/saeedsalam.github.io"
+        data-repo-id="R_kgDOL-M9jw"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOL-M9j84CffrD"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        data-loading="lazy"
+        crossorigin="anonymous"
+        async>
+</script>
