--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,10 +9,10 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
   
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
   <!-- highlight.js support -->
-  <link rel="stylesheet" href="/js/highlightjs/styles/default.css">
+  <link rel="stylesheet" href="/js/highlightjs/styles/github.css">
 
   <script type="text/javascript" src="/js/highlightjs/highlight.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/plaintext.min.js"></script>
