--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,6 @@
   <script type="text/javascript" src="/js/highlightjs/highlight.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/plaintext.min.js"></script>
   <script type="text/javascript"> hljs.highlightAll(); </script>
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="44147719-e989-4cb1-af68-3765c1cded6c"></script>
   <!-- end highlight.js support -->
 </head>
